Updated seeder. Small fixies.
